# CatConway

./: .gitignore  Cargo.toml  README.md  favorites.txt
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: METRICS_GUIDE.md  index.html
scripts/: build_site.py
shaders/: compute.wgsl  render.wgsl
src/: app.rs  camera.rs  classify.rs  export.rs  favorites.rs  grid.rs  main.rs  renderer.rs  search.rs  simulation.rs  stats.rs  ui.rs
