[package]
name = "catconway"
version = "0.1.0"
edition = "2024"
description = "GPU-accelerated Conway's Game of Life with a dynamical systems focus"

[dependencies]
wgpu = "24"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rand = "0.8"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
egui_plot = "0.31"
gif = "0.13"
rayon = "1.11"

[profile.release]
opt-level = 3
lto = true
strip = true
